--- a/routes-OPTIONS/users-IDme-application-passwords.json
+++ b/routes-OPTIONS/users-IDme-application-passwords.json
@@ -49,86 +49,5 @@
             "args": []
         }
     ],
-    "schema": {
-        "$schema": "http://json-schema.org/draft-04/schema#",
-        "title": "application-password",
-        "type": "object",
-        "properties": {
-            "uuid": {
-                "description": "Уникальный идентификатор для пароля приложения.",
-                "type": "string",
-                "format": "uuid",
-                "context": [
-                    "view",
-                    "edit",
-                    "embed"
-                ],
-                "readonly": true
-            },
-            "app_id": {
-                "description": "UUID предоставляемый приложением для уникальной идентификации. Рекомендуется использовать UUID v5 с пространством имен URL или DNS.",
-                "type": "string",
-                "format": "uuid",
-                "context": [
-                    "view",
-                    "edit",
-                    "embed"
-                ]
-            },
-            "name": {
-                "description": "Название пароля приложения.",
-                "type": "string",
-                "required": true,
-                "context": [
-                    "view",
-                    "edit",
-                    "embed"
-                ]
-            },
-            "password": {
-                "description": "Создаваемый пароль. Доступен после добавления приложения.",
-                "type": "string",
-                "context": [
-                    "edit"
-                ],
-                "readonly": true
-            },
-            "created": {
-                "description": "Дата и время (GMT) создания пароля приложения.",
-                "type": "string",
-                "format": "date-time",
-                "context": [
-                    "view",
-                    "edit"
-                ],
-                "readonly": true
-            },
-            "last_used": {
-                "description": "Дата и время (GMT) последнего использования пароля приложения.",
-                "type": [
-                    "string",
-                    "null"
-                ],
-                "format": "date-time",
-                "context": [
-                    "view",
-                    "edit"
-                ],
-                "readonly": true
-            },
-            "last_ip": {
-                "description": "IP-адрес, с которого последний раз использовался пароль приложения.",
-                "type": [
-                    "string",
-                    "null"
-                ],
-                "format": "ip",
-                "context": [
-                    "view",
-                    "edit"
-                ],
-                "readonly": true
-            }
-        }
-    }
+    "schema": { ... }
 }
